# kasumi

./: .gitignore  README.md
kernel/: CMakeLists.txt  linker.ld.in
kernel/include/arch/x86/: cpuid.h  idt.h  page_table.h  port-io.h
kernel/include/common/: arch-hook.h  basic-io.h  basic_io.h  format_string.h  kernel_info.h  macros.h  panic.h  printf.h  serial.h  stack.h
kernel/include/common/cpu/: topology.h
kernel/include/common/mm/: buddy_allocator.h  hhdm.h  kmap.h  memmap.h  pmm.h  slub.h  vmm.h  zone.h
kernel/include/common/syscall/: mmap.h
kernel/include/libc/: assert.h  stdarg.h  stdint.h  stdmem.h  string.h
kernel/include/protocol/limine/: deploy.h
kernel/scripts/: build-limine-iso.sh
kernel/src/arch/x86/: hang.c  idt.c  init.c  isr-stub.c  serial.c  stack.c
kernel/src/arch/x86/interrupts/: entry.c
kernel/src/arch/x86/mm/: kmap.c  vmm.c  vmm_page_table.c
kernel/src/arch/x86/syscall/: mmap.c
kernel/src/common/: format_string.c  init_extern.c  kernel.c  panic.c  printf.c
kernel/src/common/mm/: buddy_allocator.c  hhdm.c  pmm.c  slub.c  vmm_hhdm.c
kernel/src/libc/: stdmem.c
kernel/src/protocol/limine/: boot.c  deploy-requests.c
kernel/src/protocol/limine/hal/: memmap.c
tools/limine/: limine-bios-hdd.h  limine.conf
tools/limine/boot/EFI/: BOOTAA64.EFI  BOOTLOONGARCH64.EFI  BOOTRISCV64.EFI
